--- a/vercel.json
+++ b/vercel.json
@@ -10,7 +10,7 @@
       "use": "@vercel/static-build",
       "config": {
         "buildCommand": "npm run build",
-        "outputDirectory": "dist/public"
+        "outputDirectory": "dist"
       }
     }
   ],
@@ -20,15 +20,15 @@
       "dest": "/api/_app.ts"
     },
     {
-      "src": "/(.*\\.(js|css|ico|png|jpg|svg|json))",
-      "dest": "/dist/public/$1"
-    },
-    {
-      "handle": "filesystem"
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$)",
+      "dest": "/dist/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/dist/public/index.html"
+      "dest": "/dist/index.html"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
