--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,13 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "server/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "server/index.ts"
+      "dest": "api/index.ts"
     },
     {
       "src": "/(.*)",
-      "dest": "server/index.ts"
+      "dest": "/client/index.html"
     }
   ],
   "env": {
