--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,10 @@
   "installCommand": "npm install --platform=linux --arch=x64",
   "functions": {
     "api/**/*": {
-      "runtime": "nodejs22.x"
+      "runtime": "@vercel/node@3"
     },
     "server/vercel.js": {
-      "runtime": "nodejs22.x"
+      "runtime": "@vercel/node@3"
     }
   },
   "routes": [
