--- a/vercel.json
+++ b/vercel.json
@@ -1,30 +1,32 @@
-// vercel.json
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install --platform=linux --arch=x64",
+  "functions": {
+    "api/**/*": {
+      "runtime": "@vercel/node@3"
     },
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
+    "server/vercel.js": {
+      "runtime": "@vercel/node@3"
     }
-  ],
+  },
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/api/index.ts"
-    },
-    {
-      "handle": "filesystem"
+      "dest": "server/vercel.js"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.html"
+      "dest": "dist/$1",
+      "continue": true
+    },
+    {
+      "src": "/(.*)",
+      "dest": "server/vercel.js"
     }
-  ]
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
