update with neon link

--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+# Database connection
 DATABASE_URL=postgresql://neondb_owner:npg_DwWCumkRza45@ep-wandering-dream-a4pweakl-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+
+# Environment
+NODE_ENV=development 
+
+# Security
+SESSION_SECRET=somethingAboutSecretsJustGetsMe
+
+# Server options
+PORT=5000
+DEBUG=true
