--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,11 @@ dist
 server/public
 vite.config.ts.*
 *.tar.gz
+.env
+.env.local
+.env.development
+.env.test
+.env.production
+*.log
+.vscode/
+.idea/
