--- a/vercel.json
+++ b/vercel.json
@@ -6,14 +6,14 @@
       "use": "@vercel/node"
     }
   ],
-  "rewrites": [
+  "routes": [
     {
-      "source": "/api/(.*)",
-      "destination": "server/index.ts"
+      "src": "/api/(.*)",
+      "dest": "server/index.ts"
     },
     {
-      "source": "/(.*)",
-      "destination": "server/index.ts"
+      "src": "/(.*)",
+      "dest": "server/index.ts"
     }
   ],
   "env": {
