--- a/vercel.json
+++ b/vercel.json
@@ -21,7 +21,8 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "DATABASE_URL": "postgresql://neondb_owner:npg_DwWCumkRza45@ep-wandering-dream-a4pweakl-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require"
   },
   "regions": ["iad1"],
   "headers": [
